<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.wiacek.hospitallist.ui.details.DetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_organisation_name"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.organisationNameDetails}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.organisationTypeDetails}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hospital_list_details_organisation_type"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.organisationTypeDetails}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.organisationSubtypeDetails}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hospital_list_details_organisation_subtype"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.organisationSubtypeDetails}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.organisationSectorDetails}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_organisation_sector"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.organisationSectorDetails}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_organisation_ispims_managed"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:value="@{viewModel.organisationIsPimsManagedDetails}"
                    app:textYes="@{@string/yes}"
                    app:textNo="@{@string/no}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.organisationAddressDetails}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_organisation_address"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.organisationAddressDetails}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.organisationAddress1Details}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_organisation_address1"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.organisationAddress1Details}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.organisationAddress2Details}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_organisation_address2"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.organisationAddress2Details}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.organisationAddress3Details}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_organisation_address3"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.organisationAddress3Details}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.parentNameDetails}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_parent_name"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.parentNameDetails}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.parentOdsCodeDetails}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_parent_ods_code"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.parentOdsCodeDetails}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.phoneDetails}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_phone"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:linkifyText="@{viewModel.phoneDetails}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.emailDetails}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_email"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:linkifyText="@{viewModel.emailDetails}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.websiteDetails}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_website"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:linkifyText="@{viewModel.websiteDetails}"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                app:visibility="@{viewModel.faxDetails}">
                <TextView
                    android:theme="@style/TextViewDetailsPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_list_details_fax"
                    android:layout_weight="1"/>
                <TextView
                    android:theme="@style/TextViewDetailsSecondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:linkifyText="@{viewModel.faxDetails}"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>